# libiec61850-1.5.1-linux

./: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  README.md  cmake_install.cmake
examples/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
examples/server_ied1/: CMakeLists.txt  CTestTestfile.cmake  Dockerfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  server_ied1  server_ied1.c  server_ied1.vcxproj  server_ied1.vcxproj.filters  simpleIO_direct_control.cid  static_model.c  static_model.h
examples/server_ied13/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  server_ied13.c  server_ied13.vcxproj  server_ied13.vcxproj.filters  simpleIO_direct_control.cid  static_model.c  static_model.h
examples/server_ied16/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  server_ied16.c  server_ied16.vcxproj  server_ied16.vcxproj.filters  simpleIO_direct_control.cid  static_model.c  static_model.h
examples/server_ied20/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  server_ied20.c  server_ied20.vcxproj  server_ied20.vcxproj.filters  simpleIO_direct_control.cid  static_model.c  static_model.h
examples/server_ied4/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  server_ied4.c  server_ied4.vcxproj  server_ied4.vcxproj.filters  simpleIO_direct_control.cid  static_model.c  static_model.h
examples/server_ied7/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  (+6 more)
(+144 files in other folders)
