add_subdirectory(server_ied1)
add_subdirectory(server_ied4)
add_subdirectory(server_ied7)
add_subdirectory(server_ied13)
add_subdirectory(server_ied16)
add_subdirectory(server_ied20)
add_subdirectory(substation_simulation_control_app)


if (NOT WIN32)
    add_subdirectory(mms_utility)
endif(NOT WIN32)

if(WIN32)
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../third_party/winpcap/Lib/wpcap.lib")
        set(BUILD_SV_GOOSE_EXAMPLES ON)
        message("Found winpcap -> compile examples for GOOSE and SV")
    endif()
else()
    set(BUILD_SV_GOOSE_EXAMPLES ON)
endif()